--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@ h1{
     display: block;
     width: 100%;
     background: #607D8B;
-    padding: 10px;
+    padding: 10px 0px;
     margin: 0;
 }
 p, h1{
